fixed h3 text-align

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -444,7 +444,7 @@ section#concentrations {
 		text-align: center;
 		break-inside: avoid;
 		-webkit-column-break-inside: avoid;
-		p {
+		h3, p {
 		  text-align: left;
 		}
 	}
